--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.r2dbc.url=r2dbc:pool:mysql://127.0.0.1:3306/demo
+spring.r2dbc.username=test
+spring.r2dbc.password=test
+spring.r2dbc.pool.initial-size=10
+spring.r2dbc.pool.max-size=50
+spring.r2dbc.pool.max-idle-time=30s
+spring.r2dbc.pool.validation-query=SELECT 1
